Sorted author list by last name using: grep -A1 '\item' authors.tex | grep -v "item" | gawk '{printf $NF;$NF = "" ;printf " "$0"\n"}' | sort | gawk '{print "\\item\n  "$1", "$2" "$3}'

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -2,73 +2,71 @@
 
 \editornote{Include author affiliations here.}
 
-\editornote{Sort alphabetically by last name, not first.}
-
 \begin{itemize}
 \item
-  Anders Logg
+  Aln{\ae}s, Martin S.
 \item
-  Andy R. Terrel
+  Davidson, David B.
 \item
-  Claes Johnson
+  Hake, Johan 
 \item
-  David B. Davidson
+  Hentschel, Susanne 
 \item
-  Emil Alf L{\o}vgren
+  Hoffman, Johan 
 \item
-  Evan Lezar
+  Jansson, Johan 
 \item
-  Garth N. Wells
+  Jansson, Niclas 
 \item
-  Hans Joachim Schroll
+  Johnson, Claes 
 \item
-  Hans Petter Langtangen
+  Kirby, Robert C.
 \item
-  Ilmar M. Wilbers
+  Knepley, Matthew G.
 \item
-  Joakim Sundnes
+  Langtangen, Hans Petter
 \item
-  Johan Hake
+  Lezar, Evan 
 \item
-  Johan Hoffman
+  Linge, Svein 
 \item
-  Johan Jansson
+  Logg, Anders 
 \item
-  Kent-Andre Mardal
+  Lopes, N. 
 \item
-  Kristian B. \O{}lgaard
+  L{\o}vgren, Emil Alf
 \item
-  Kristian Valen-Sendstad
+  Mardal, Kent-Andre 
 \item
-  Kristoffer Selim
+  Nazarov, Murtazo 
 \item
-  L. Ridgway Scott
+  Nikbakht, Mehdi
 \item
-  L. Trabucho
+  \O{}lgaard, Kristian B.
 \item
-  Marie E. Rognes
+  Pereira, P. 
 \item
-  Martin S. Aln{\ae}s
+  Rognes, Marie E.
 \item
-  Matthew G. Knepley
+  Schroll, Hans Joachim
 \item
-  Mehdi Nikbakht
+  Scott, L. Ridgway
 \item
-  Murtazo Nazarov
+  Selim, Kristoffer 
 \item
-  Niclas Jansson
+  Shan, Xuming 
 \item
-  N. Lopes
+  Skavhaug, Ola 
 \item
-  Ola Skavhaug
+  Sundnes, Joakim 
 \item
-  P. Pereira
+  Terrel, Andy R.
 \item
-  Robert C. Kirby
+  Trabucho, L. 
 \item
-  Susanne Hentschel
+  Valen-Sendstad, Kristian 
 \item
-  Svein Linge
+  Wells, Garth N.
 \item
-  Xuming Shan
+  Wilbers, Ilmar M.
 \end{itemize}
