updates in the CSF chapter + added a new code environment for general code listing

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3720,6 +3720,41 @@
   pages = {65--82}
 }
 
+
+@Article{Simula.SC.648,
+  author = {Hentschel, Susanne and Mardal, Kent-Andre and L{\o}vgren, Alf Emil and Linge, Svein and Haughton, Victor},
+  title = {Characterization of cyclical CSF flow in the foramen magnum and upper cervical spinal canal with MR flow imaging and Computational Fluid Dynamics},
+  year = {2010},
+  journal = {American Journal of Neuroradiology},
+  volume = {31},
+  number = {6},
+  pages = {997 - 1002}
+}
+
+@Article{Simula.SC.522,
+  author = {Linge, Svein and Haughton, Victor and L{\o}vgren, Alf Emil and Mardal, Kent-Andre and Langtangen, Hans Petter},
+  title = {CSF flow dynamics at the cranio-vertebral junction studied with an idealized model of the subarachnoid space and computational flow analysis},
+  year = {2009},
+  abstract = {},
+  journal = {American Journal of Neuroradiology},
+  volume = {31},
+  number = {1},
+  pages = {185-192}
+}
+
+
+@article{Quigley2004,
+    author = "Quigley, M. F. and Iskandar, B. J. and Quigley, M. A. and Nicosia, M. N.  and Haughton, V.",
+    title  = "Cerebrospinal fluid flow in foramen magnum: {T}emporal and spatial
+              patterns at {MR} imaging in volunteers and in patients with
+              {C}hiari {I} malformation",
+    journal= "Radiology",
+    volume = "232",
+    pages  = "229-236",
+    year   = "2004"}
+
+
+
 @ARTICLE{HaughtonKorosecMedowEtAl2003,
   author = {Haughton, V. and Korosec, F. R. and Medow, J. E. and Dolar, M. T.
 	and Iskandar, B. J.},
