--- a/packages/codehighlight.sty
+++ b/packages/codehighlight.sty
@@ -227,3 +227,30 @@ backgroundcolor=\color{yellow!10}
 }
 
 \lstnewenvironment{bash}[1][]{\lstset{style=mybash}}{}
+
+\lstdefinestyle{mygencode}{
+%\lstset{
+%keepspaces=true,
+language=bash,
+showtabs=true,
+tab=,
+tabsize=2,
+basicstyle=\ttfamily\footnotesize,%\setstretch{.5},
+stringstyle=\color{stringcolour},
+showstringspaces=false,
+alsoletter={1234567890},
+emphstyle=\color{exceptioncolour}\bfseries,
+commentstyle=\color{commentcolour}\slshape,
+breaklines=true,
+breakatwhitespace= true,
+xleftmargin=\framemargin,
+xrightmargin=\framemargin,
+aboveskip=1ex,
+frame=trbl,
+framesep=.3ex,
+rulecolor=\color{black!40},
+backgroundcolor=\color{yellow!10}
+}
+
+\lstnewenvironment{gencode}[1][]{\lstset{style=mygencode}}{}
+
