Tweak Lopes and Pereira names in author list

--- a/backmatter/authors.tex
+++ b/backmatter/authors.tex
@@ -8,17 +8,17 @@
 \item
   Davidson, David B.
 \item
-  Hake, Johan 
+  Hake, Johan
 \item
-  Hentschel, Susanne 
+  Hentschel, Susanne
 \item
-  Hoffman, Johan 
+  Hoffman, Johan
 \item
-  Jansson, Johan 
+  Jansson, Johan
 \item
-  Jansson, Niclas 
+  Jansson, Niclas
 \item
-  Johnson, Claes 
+  Johnson, Claes
 \item
   Kirby, Robert C.
 \item
@@ -26,25 +26,25 @@
 \item
   Langtangen, Hans Petter
 \item
-  Lezar, Evan 
+  Lezar, Evan
 \item
-  Linge, Svein 
+  Linge, Svein
 \item
-  Logg, Anders 
+  Logg, Anders
 \item
-  Lopes, N. 
+  Lopes, Nuno D.
 \item
   L{\o}vgren, Emil Alf
 \item
-  Mardal, Kent-Andre 
+  Mardal, Kent-Andre
 \item
-  Nazarov, Murtazo 
+  Nazarov, Murtazo
 \item
   Nikbakht, Mehdi
 \item
   \O{}lgaard, Kristian B.
 \item
-  Pereira, P. 
+  Pereira, Pedro J. S.
 \item
   Rognes, Marie E.
 \item
@@ -52,19 +52,19 @@
 \item
   Scott, L. Ridgway
 \item
-  Selim, Kristoffer 
+  Selim, Kristoffer
 \item
-  Shan, Xuming 
+  Shan, Xuming
 \item
-  Skavhaug, Ola 
+  Skavhaug, Ola
 \item
-  Sundnes, Joakim 
+  Sundnes, Joakim
 \item
   Terrel, Andy R.
 \item
-  Trabucho, L. 
+  Trabucho, L.
 \item
-  Valen-Sendstad, Kristian 
+  Valen-Sendstad, Kristian
 \item
   Wells, Garth N.
 \item
