--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3,15 +3,6 @@
 
 @STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
 
-@INPROCEEDINGS{WilbersLangtangenO2009,
-  author = {Wilbers, I. M. and Langtangen, H. P. and \O deg\aa rd, \AA.},
-  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
-  booktitle = {MekIT'09, Fifth national conference on Computational Mechanics},
-  year = {2009},
-  editor = {B.~Skallerud and H.~I.~Andersson},
-  publisher = {Tapir Academic Press}
-}
-
 @MISC{www:swig,
   author = {David Beazley et. al.},
   title = {{SWIG} software package},
@@ -158,21 +149,6 @@
   timestamp = {2009.05.27}
 }
 
-@ARTICLE{AinsworthOden1993,
-  author = {Ainsworth, M. and Oden, J. T.},
-  title = {A unified approach to a posteriori error estimation using element
-	residual methods},
-  journal = {Numerische Mathematik},
-  year = {1993},
-  volume = {65},
-  pages = {23--50},
-  number = {1},
-  file = {:AinsworthOden1993.pdf:PDF},
-  owner = {massing},
-  publisher = {Springer},
-  timestamp = {2009.05.27}
-}
-
 @BOOK{AinsworthOden2000,
   title = {A Posteriori Error Estimation in Finite Element Analysis},
   publisher = {Wiley and Sons},
@@ -197,9 +173,24 @@
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{AinsworthOden1993,
+  author = {Ainsworth, M. and Oden, J. T.},
+  title = {A unified approach to a posteriori error estimation using element
+	residual methods},
+  journal = {Numerische Mathematik},
+  year = {1993},
+  volume = {65},
+  pages = {23--50},
+  number = {1},
+  file = {:AinsworthOden1993.pdf:PDF},
+  owner = {massing},
+  publisher = {Springer},
+  timestamp = {2009.05.27}
+}
+
 @ARTICLE{AlastrueyParkerPeiroEtAl2007,
-  author = {J. Alastruey and K. H. Parker and J. Peiro and S. M. Byrd and S. J.
-	Sherwin},
+  author = {J. Alastruey and K. H. Parker and J. Peiro and S. M. Byrd and S.
+	J. Sherwin},
   title = {Modelling the circle of Willis to assess the effects of anatomical
 	variations and occlusions on cerebral flows},
   journal = {Journal of Biomechanics},
@@ -426,16 +417,6 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{ArnoldFalkWinther2006,
-  author = {Arnold, D. N. and Falk, R. S. and Winther, R.},
-  title = {{Finite element exterior calculus, homological techniques, and applications}},
-  journal = {Acta Numerica},
-  year = {2006},
-  volume = {15},
-  pages = {1--155},
-  publisher = {Cambridge Univ Press}
-}
-
 @ARTICLE{ArnoldAwanouWinther2008,
   author = {D. N. Arnold and G. Awanou and R. Winther},
   title = {Finite elements for symmetric tensors in three dimensions},
@@ -531,27 +512,14 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{ArnoldFalkWinther2006a,
-  author = {D. N. Arnold and R. S. Falk and R. Winther},
-  title = {Finite element exterior calculus, homological techniques, and applications},
+@ARTICLE{ArnoldFalkWinther2006,
+  author = {Arnold, D. N. and Falk, R. S. and Winther, R.},
+  title = {{Finite element exterior calculus, homological techniques, and applications}},
   journal = {Acta Numerica},
   year = {2006},
   volume = {15},
   pages = {1--155},
-  issn = {0962-4929}
-}
-
-@ARTICLE{ArnoldFalkWinther2006b,
-  author = {D. N. Arnold and R. S. Falk and R. Winther},
-  title = {Finite element exterior calculus, homological techniques, and applications},
-  journal = {Acta Numer.},
-  year = {2006},
-  volume = {15},
-  pages = {1--155},
-  fjournal = {Acta Numerica},
-  issn = {0962-4929},
-  owner = {kent-and},
-  timestamp = {2009.06.08}
+  publisher = {Cambridge Univ Press}
 }
 
 @INCOLLECTION{ArnoldFalkWinther2006c,
@@ -654,8 +622,8 @@
 }
 
 @TECHREPORT{AsanovicBodikCatanzaroEtAl2006,
-  author = {K. Asanovic and R. Bodik and B. C. Catanzaro and J. J. Gebis
-	and P. Husbands and K. Keutzer and D. A. Patterson and W. L. Plishker
+  author = {K. Asanovic and R. Bodik and B. C. Catanzaro and J. J. Gebis and
+	P. Husbands and K. Keutzer and D. A. Patterson and W. L. Plishker
 	and J. Shalf and S. W. Williams and K. A. Yelick},
   title = {The Landscape of Parallel Computing Research: A View from {Berkeley}},
   institution = {EECS Department, University of California, Berkeley},
@@ -748,17 +716,6 @@
   year = {1971},
   volume = {16 },
   pages = { 322--333}
-}
-
-@ARTICLE{Babuvska1971a,
-  author = {Ivo Babu\v{s}ka},
-  title = {Error Bounds for Finite Element Method},
-  journal = {Numer. Math.},
-  year = {1971},
-  volume = {16},
-  pages = {322--333},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @INCOLLECTION{BabuvskaAziz1972,
@@ -1011,11 +968,11 @@
   title = {A {N}itsche extended finite element method for incompressible elasticity
 	with discontinuous modulus of elasticity},
   institution = {Department of Mathematical Sciences
-
+	
 	Division of Mathematics
-
+	
 	CHALMERS UNIVERSITY OF TECHNOLOGY
-
+	
 	UNIVERSITY OF GOTHENBURG},
   year = {2008},
   file = {:BeckerBurmanHansbo2008.pdf:PDF},
@@ -1381,7 +1338,7 @@
   author = {Braess, Dietrich},
   address = {Cambridge},
   edition = {Third},
-  isbn = {978-0-521-70518-9},
+  isbn = {978-0-521-70518-9}
 }
 
 @ARTICLE{BraessVerfurth1996,
@@ -1394,17 +1351,6 @@
   owner = {massing},
   publisher = {Society for Industrial and Applied Mathematics},
   timestamp = {2009.05.27}
-}
-
-@ARTICLE{BrambleZlamal1970,
-  author = {Bramble, J. H. and Zl{\'a}mal, M.},
-  title = {Triangular elements in the finite element method},
-  journal = {Mathematics of Computation},
-  year = {1970},
-  pages = {809--820},
-  owner = {logg},
-  publisher = {American Mathematical Society},
-  timestamp = {2009.06.06}
 }
 
 @BOOK{Bramble1993,
@@ -1447,6 +1393,17 @@
   year = {2000},
   volume = {69},
   pages = {463--480}
+}
+
+@ARTICLE{BrambleZlamal1970,
+  author = {Bramble, J. H. and Zl{\'a}mal, M.},
+  title = {Triangular elements in the finite element method},
+  journal = {Mathematics of Computation},
+  year = {1970},
+  pages = {809--820},
+  owner = {logg},
+  publisher = {American Mathematical Society},
+  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Brandt1977,
@@ -1499,16 +1456,6 @@
 }
 
 @ARTICLE{Brezzi1974,
-  author = {F. Brezzi},
-  title = {On the existence, uniqueness and approximation of saddle--point problems
-	arising from {L}agrangian multipliers},
-  journal = {RAIRO. Analyse Num\'{e}rique},
-  year = {1974},
-  volume = {8},
-  pages = {129--151}
-}
-
-@ARTICLE{Brezzi1974a,
   author = {F. Brezzi},
   title = {On the Existence, Uniqueness and Approximation of Saddle-Point Problems
 	Arising from Lagrangian Multipliers},
@@ -1622,8 +1569,8 @@
 }
 
 @ARTICLE{BrochetYangMaioEtAl2005,
-  author = {Didier X. P. Brochet and Dongmei Yang and Alessandro Di Maio and W.
-	Jonathan Lederer and Clara Franzini-Armstrong and Heping Cheng},
+  author = {Didier X. P. Brochet and Dongmei Yang and Alessandro Di Maio and
+	W. Jonathan Lederer and Clara Franzini-Armstrong and Heping Cheng},
   title = {{C}a$^{2+}$ blinks: rapid nanoscopic store calcium signaling.},
   journal = {Proc. Natl. Acad. Sci. U. S. A.},
   year = {2005},
@@ -1727,20 +1674,6 @@
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{BurmanFernandez2009,
-  author = {Burman, E. and Fern{\'a}ndez, M. A.},
-  title = {Stabilization of explicit coupling in fluid--structure interaction
-	involving fluid incompressibility},
-  journal = {Computer Methods in Applied Mechanics and Engineering},
-  year = {2009},
-  volume = {198},
-  pages = {766--784},
-  number = {5-8},
-  owner = {massing},
-  publisher = {Elsevier},
-  timestamp = {2009.05.06}
-}
-
 @ARTICLE{BurmanFernandez2007,
   author = {Burman, E. and Fern{\'a}ndez, M.A.},
   title = {{Stabilized explicit coupling for fluid--structure interaction using
@@ -1751,6 +1684,20 @@
   pages = {467--472},
   number = {8},
   file = {:BurmanFernandez2007.pdf:PDF},
+  owner = {massing},
+  publisher = {Elsevier},
+  timestamp = {2009.05.06}
+}
+
+@ARTICLE{BurmanFernandez2009,
+  author = {Burman, E. and Fern{\'a}ndez, M. A.},
+  title = {Stabilization of explicit coupling in fluid--structure interaction
+	involving fluid incompressibility},
+  journal = {Computer Methods in Applied Mechanics and Engineering},
+  year = {2009},
+  volume = {198},
+  pages = {766--784},
+  number = {5-8},
   owner = {massing},
   publisher = {Elsevier},
   timestamp = {2009.05.06}
@@ -1912,8 +1859,8 @@
 
 @ARTICLE{CaoHuangRussell2001,
   author = {Cao, W. and Huang, W. and Russell, R. D.},
-  title = {Comparison of two-dimensional r-adaptive finite element methods
-	using various error indicators},
+  title = {Comparison of two-dimensional r-adaptive finite element methods using
+	various error indicators},
   journal = {Mathematics and Computers in Simulation},
   year = {2001},
   volume = {56},
@@ -2129,17 +2076,6 @@
   number = {7}
 }
 
-@ARTICLE{Ciarlet1975,
-  author = {Ciarlet, P. G.},
-  title = {Lectures on the finite element method},
-  journal = {Lectures on Mathematics and Physics, Tata Institute of Fundamental
-	Research, Bombay},
-  year = {1975},
-  volume = {49},
-  owner = {logg},
-  timestamp = {2009.06.06}
-}
-
 @BOOK{Ciarlet2002,
   title = {The finite element method for elliptic problems},
   publisher = {Society for Industrial and Applied Mathematics (SIAM)},
@@ -2181,6 +2117,17 @@
   publisher = {Les Presses de l'Universite de Montreal},
   year = {1976},
   author = {P. G. Ciarlet},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
+@ARTICLE{Ciarlet1975,
+  author = {Ciarlet, P. G.},
+  title = {Lectures on the finite element method},
+  journal = {Lectures on Mathematics and Physics, Tata Institute of Fundamental
+	Research, Bombay},
+  year = {1975},
+  volume = {49},
   owner = {logg},
   timestamp = {2009.06.06}
 }
@@ -2560,9 +2507,9 @@
 @PHDTHESIS{Dunne2007,
   author = {Thomas Dunne},
   title = {Adaptive Finite Element Approximation of Fluid-Structure Interaction
-        Based on Eulerian and Arbitrary Lagrangian-Eulerian Variational Formulations},
+	Based on Eulerian and Arbitrary Lagrangian-Eulerian Variational Formulations},
   school = {Ruprecht-Karls-Universität, Heidelberg},
-  year = {2007},
+  year = {2007}
 }
 
 @ARTICLE{DunneRannacher2006,
@@ -2603,8 +2550,8 @@
 }
 
 @ARTICLE{EdenMeurerSanchezEtAl2008,
-  author = {S. V. Eden and W. J. Meurer and B. N. Sanchez and L. D. Lisabeth and M. A. Smith
-	and D. L. Brown and L. B. Morgenstern },
+  author = {S. V. Eden and W. J. Meurer and B. N. Sanchez and L. D. Lisabeth
+	and M. A. Smith and D. L. Brown and L. B. Morgenstern },
   title = {Gender and ethnic differences in subarachnoid hemorrhage},
   journal = {Neurology},
   year = {2008},
@@ -2965,8 +2912,9 @@
 }
 
 @ARTICLE{EvansIwaiGristEtAl1993,
-  author = {A. J. Evans and F. Iwai and T. A. Grist and H. D. Sostman and L. W. Hedlund and
-	C. E. Spritzer and R. Negro-Vilar and C. A. Beam and N. J. Pelc},
+  author = {A. J. Evans and F. Iwai and T. A. Grist and H. D. Sostman and L.
+	W. Hedlund and C. E. Spritzer and R. Negro-Vilar and C. A. Beam and
+	N. J. Pelc},
   title = {Magnetic resonance imaging of blood flow with a phase subtraction
 	technique. In vitro and in vivo validation.},
   journal = {Investigative radiology},
@@ -3050,7 +2998,7 @@
 	interaction},
   institution = {Aerospace Computational Science},
   year = {2008},
-  number = {Tech. Report DACS-01-008},
+  number = {Tech. Report DACS-01-008}
 }
 
 @ARTICLE{FisherRossmann2009,
@@ -3241,8 +3189,8 @@
 }
 
 @TECHREPORT{GeeSiefertHuEtAl2006,
-  author = {M. W. Gee and C. M. Siefert and J. J. Hu and R. S. Tuminaro and M. G.
-	Sala},
+  author = {M. W. Gee and C. M. Siefert and J. J. Hu and R. S. Tuminaro and M.
+	G. Sala},
   title = {{ML} 5.0 Smoothed Aggregation User's Guide},
   institution = {Sandia National Laboratories},
   year = {2006},
@@ -3325,7 +3273,7 @@
   pages = {76 - 95},
   number = {1},
   doi = {DOI: 10.1016/0021-9991(79)90088-3},
-  issn = {0021-9991},
+  issn = {0021-9991}
 }
 
 @BOOK{GolubLoan1989,
@@ -3385,6 +3333,19 @@
   file = {Grah_1947_441.pdf:Grah_1947_441.pdf:PDF;Grah_1947_441.pdf:Grah_1947_441.pdf:PDF},
   pmid = {18895519},
   timestamp = {2009.02.13}
+}
+
+@ARTICLE{GreensteinEtAl2002,
+  author = {Joseph L Greenstein and Raimond L Winslow},
+  title = {An integrative model of the cardiac ventricular myocyte incorporating
+	local control of {C}a$^{2+}$ release.},
+  journal = {Biophys. J.},
+  year = {2002},
+  volume = {83},
+  pages = {2918--2945},
+  number = {6},
+  month = {Dec},
+  url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
 }
 
 @ARTICLE{GreensteinWinslow2002,
@@ -3564,8 +3525,8 @@
 
 @ARTICLE{HansboHansbo2002,
   author = {Hansbo, A. and Hansbo, P.},
-  title = {An unfitted finite element method, based on Nitscheâs method,
-	for elliptic interface problems},
+  title = {An unfitted finite element method, based on Nitscheâs method, for
+	elliptic interface problems},
   journal = {Computer Methods in Applied Mechanics and Engineering},
   year = {2002},
   volume = {191},
@@ -3579,8 +3540,7 @@
 
 @ARTICLE{HansboHansboLarson2003,
   author = {Hansbo, A. and Hansbo, P. and Larson, M. G.},
-  title = {A finite element method on composite grids based on Nitscheâs
-	method},
+  title = {A finite element method on composite grids based on Nitscheâs method},
   journal = {M2AN Math. Model. Numer. Anal},
   year = {2003},
   volume = {37},
@@ -3661,16 +3621,7 @@
 @ARTICLE{HansboLarson2002,
   author = {Hansbo, P. and Larson, M. G.},
   title = {Discontinuous Galerkin methods for incompressible and nearly incompressible
-	elasticity by Nitsche's metho}},
-  journal = {Computer Methods in Applied Mechanics and Engineering},
-  year = {2002},
-  volume = {191},
-  pages = {1895--1908},
-  number = {17-18},
-  file = {:HanLar2002.pdf:PDF},
-  owner = {massing},
-  publisher = {Elsevier},
-  timestamp = {2009.05.06}
+	elasticity by Nitsche's metho}
 }
 
 @ARTICLE{HansboLarson2003,
@@ -3720,41 +3671,6 @@
   pages = {65--82}
 }
 
-
-@Article{Simula.SC.648,
-  author = {Hentschel, Susanne and Mardal, Kent-Andre and L{\o}vgren, Alf Emil and Linge, Svein and Haughton, Victor},
-  title = {Characterization of cyclical CSF flow in the foramen magnum and upper cervical spinal canal with MR flow imaging and Computational Fluid Dynamics},
-  year = {2010},
-  journal = {American Journal of Neuroradiology},
-  volume = {31},
-  number = {6},
-  pages = {997 - 1002}
-}
-
-@Article{Simula.SC.522,
-  author = {Linge, Svein and Haughton, Victor and L{\o}vgren, Alf Emil and Mardal, Kent-Andre and Langtangen, Hans Petter},
-  title = {CSF flow dynamics at the cranio-vertebral junction studied with an idealized model of the subarachnoid space and computational flow analysis},
-  year = {2009},
-  abstract = {},
-  journal = {American Journal of Neuroradiology},
-  volume = {31},
-  number = {1},
-  pages = {185-192}
-}
-
-
-@article{Quigley2004,
-    author = "Quigley, M. F. and Iskandar, B. J. and Quigley, M. A. and Nicosia, M. N.  and Haughton, V.",
-    title  = "Cerebrospinal fluid flow in foramen magnum: {T}emporal and spatial
-              patterns at {MR} imaging in volunteers and in patients with
-              {C}hiari {I} malformation",
-    journal= "Radiology",
-    volume = "232",
-    pages  = "229-236",
-    year   = "2004"}
-
-
-
 @ARTICLE{HaughtonKorosecMedowEtAl2003,
   author = {Haughton, V. and Korosec, F. R. and Medow, J. E. and Dolar, M. T.
 	and Iskandar, B. J.},
@@ -3788,6 +3704,19 @@
   pages = {532-562},
   owner = {kent-and},
   timestamp = {2009.06.08}
+}
+
+@ARTICLE{Simula.SC.648,
+  author = {Hentschel, Susanne and Mardal, Kent-Andre and L{\o}vgren, Alf Emil
+	and Linge, Svein and Haughton, Victor},
+  title = {Characterization of cyclical CSF flow in the foramen magnum and upper
+	cervical spinal canal with MR flow imaging and Computational Fluid
+	Dynamics},
+  journal = {American Journal of Neuroradiology},
+  year = {2010},
+  volume = {31},
+  pages = {997 - 1002},
+  number = {6}
 }
 
 @ARTICLE{HermanssonHansbo2003,
@@ -4352,8 +4281,8 @@
 }
 
 @ARTICLE{IngebrigtsenMorganFaulderEtAl2004,
-  author = {T. Ingebrigtsen and M. K. Morgan and K. Faulder and L. Ingebrigtsen and
-	T. Sparr and H. Schirmer },
+  author = {T. Ingebrigtsen and M. K. Morgan and K. Faulder and L. Ingebrigtsen
+	and T. Sparr and H. Schirmer },
   title = {Bifurcation geometry and the presence of cerebral artery aneurysms},
   journal = {J Neurosurg.},
   year = {2004},
@@ -4670,17 +4599,6 @@
   year = {1972},
   volume = {15},
   pages = {301--314}
-}
-
-@ARTICLE{JonesLaunder1972a,
-  author = {W. P. Jones and B. E. Launder},
-  title = {The prediction of laminarization with a two-equation model},
-  journal = {Int. J. Heat Mass Transfer},
-  year = {1972},
-  volume = {15},
-  pages = {301--314},
-  owner = {logg},
-  timestamp = {2009.06.06}
 }
 
 @TECHREPORT{K.Logg2003,
@@ -5449,6 +5367,16 @@
   series = {Texts in Computational Science and Engineering, vol 6}
 }
 
+@BOOK{Langtangen2008,
+  title = {Python Scripting for Computational Science},
+  publisher = {Springer},
+  year = {2008},
+  author = {Langtangen, Hans Petter},
+  address = {Heidelberg},
+  edition = {third},
+  isbn = {978-3-540-73915-9}
+}
+
 @BOOK{Langtangen2006,
   title = {Python Scripting for Computational Science},
   publisher = {Springer},
@@ -5531,6 +5459,18 @@
   timestamp = {2009.06.06}
 }
 
+@INBOOK{Langtangen2003b,
+  pages = {321-360},
+  title = {Using Diffpack from Python Scripts},
+  publisher = {Springer-Verlag},
+  year = {2003},
+  editor = {Langtangen, H.P. and Tveito, A.},
+  author = {Langtangen, H P and Mardal, K -A},
+  series = {Lecture Notes in Computational Science and Engineering},
+  booktitle = {Advanced Topics in Computational Partial Differential Equations -
+	Numerical Methods and Diffpack Programming}
+}
+
 @ARTICLE{LangtangenMardalWinther2002,
   author = {H. P. Langtangen and K.-A. Mardal and R. Winther},
   title = {Numerical Methods for Incompressible Viscous Flow},
@@ -5564,22 +5504,22 @@
   number = {6},
   abstract = {We consider computation of the displacement of an elastic object immersed
 	into a
-
+	
 	viscous incompressible flow. For simplicity, we assume that the mechanics
 	of the solid
-
+	
 	is governed by linear elasticity and the motion of the fluid by the
 	Stokes equation.
-
+	
 	We derive an a posteriori error estimate for this one way coupled
 	problem using
-
+	
 	duality techniques. Based on these estimates we develop an adaptive
 	algorithm that
-
+	
 	automatically constructs a suitable adapted mesh for the fluid and
 	solid domains
-
+	
 	given goal quantities specified on the solid problem},
   file = {:BengtzonLarson2009.pdf:PDF},
   owner = {massing},
@@ -5597,29 +5537,29 @@
   pages = {113--130},
   number = {1},
   abstract = {In this paper we analyze a family of discontinuous Galerkin
-
+	
 	methods, parameterized by two real parameters, for elliptic problems
 	in one
-
+	
 	dimension. Our main results are: (1) a complete inf-sup stability
 	analysis char-
-
+	
 	acterizing the parameter values yielding a stable scheme and energy
 	norm
-
+	
 	error estimates as a direct consequence thereof, (2) an analysis of
 	the error
-
+	
 	in L2 where the standard duality argument only works for special parameter
-
+	
 	values yielding a symmetric bilinear form and different orders of
 	conver-
-
+	
 	gence are obtained for odd and even order polynomials in the nonsymmetric
-
+	
 	case. The analysis is consistent with numerical results and similar
 	behavior
-
+	
 	is observed in two dimensions.},
   file = {:BengtzonLarson2009.pdf:PDF},
   owner = {massing},
@@ -5637,25 +5577,25 @@
   number = {8},
   abstract = {We investigate the characteristics and performance of goal-oriented
 	a posteriori error measures for a
-
+	
 	class of non-linear elasticity models, while restriction is made to
 	small strain theory. The chosen error
-
+	
 	measure of the displacement ÿeld can be global or local (probing the
 	chosen quantity in a speciÿc
-
+	
 	spatial point). The error is computable with the aid of the solution
 	of a dual problem whose data
-
+	
 	depend on the error measure. The main thrust of the paper is to evaluate
 	the performance of a few
-
+	
 	di erent approximation strategies for computing the dual solution.
 	The chosen strategies are compared
-
+	
 	in terms of accuracy, ease of implementation, reliability and cost-e
 	ciency. A well-known numerical
-
+	
 	example, the Cook’s membrane, is used for the numerical evaluations.},
   file = {:LarssonHansboRunesson2002.pdf:PDF},
   owner = {massing},
@@ -5756,6 +5696,19 @@
   publisher = {ACM},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{Simula.SC.522,
+  author = {Linge, Svein and Haughton, Victor and L{\o}vgren, Alf Emil and Mardal,
+	Kent-Andre and Langtangen, Hans Petter},
+  title = {CSF flow dynamics at the cranio-vertebral junction studied with an
+	idealized model of the subarachnoid space and computational flow
+	analysis},
+  journal = {American Journal of Neuroradiology},
+  year = {2009},
+  volume = {31},
+  pages = {185-192},
+  number = {1}
 }
 
 @ARTICLE{LioenSwart1998,
@@ -5883,33 +5836,33 @@
   number = {2},
   abstract = {The finite element method can be viewed as a machine that automates
 	the discretization of differential
-
+	
 	equations, taking as input a variational problem, a finite element
 	and a mesh, and producing as output
-
+	
 	a system of discrete equations. However, the generality of the framework
 	provided by the finite element
-
+	
 	method is seldom reflected in implementations (realizations), which
 	are often specialized and can handle
-
+	
 	only a small set of variational problems and finite elements (but
 	are typically parametrized over the choice
-
+	
 	of mesh).
-
+	
 	This paper reviews ongoing research in the direction of a complete
 	automation of the finite element method.
-
+	
 	In particular, this work discusses algorithms for the efficient and
 	automatic computation of a system of
-
+	
 	discrete equations from a given variational problem, finite element
 	and mesh. It is demonstrated that by
-
+	
 	automatically generating and compiling efficient low-level code, it
 	is possible to parametrize a finite element
-
+	
 	code over variational problem and finite element in addition to the
 	mesh.},
   file = {:Log2007.pdf:PDF},
@@ -6412,16 +6365,16 @@
   pages = {757--778},
   number = {4},
   abstract = {Three a posteriori error estimators for P EERS and BDMS ele-
-
+	
 	ments in linear elasticity are presented: one residual error estimator
 	and two
-
+	
 	estimators based on the solution of auxiliary local problems with
 	different
-
+	
 	boundary conditions. All of them are reliable and efficient with respect
 	to the
-
+	
 	standard norm and furthermore robust for nearly incompressible materials.},
   file = {:LonsingVerfurth2004.pdf:PDF},
   owner = {massing},
@@ -6505,16 +6458,16 @@
   pages = {1659},
   number = {256},
   abstract = {This paper deals with the a posteriori error analysis of mixed
-
+	
 	finite element methods for second order elliptic equations. It is
 	shown that a
-
+	
 	reliable and efficient error estimator can be constructed using a
 	postprocessed
-
+	
 	solution of the method. The analysis is performed in two different
 	ways: under
-
+	
 	a saturation assumption and using a Helmholtz decomposition for vector
 	fields.},
   file = {:LovadinaStenberg2006.pdf:PDF},
@@ -6642,20 +6595,6 @@
   number = {5}
 }
 
-@MISC{MardalAlnaes2009,
-  author = {K.-A. Mardal and M. S. Aln{\ae}s},
-  title = {{SFC}: },
-  year = {2009},
-  note = {URL: \url{http://fenics.org/sfc}}
-}
-
-@MISC{MardalAlnaes2009a,
-  author = {K.-A.~Mardal and M. S. Aln{\ae}s},
-  title = {{SyFi}: },
-  year = {2009},
-  note = {URL: \url{http://fenics.org/syfi}}
-}
-
 @ARTICLE{MardalTaiWinther2002,
   author = {Mardal, Kent Andre and Tai, Xue-Cheng and Winther, Ragnar},
   title = {A robust finite element method for {D}arcy-{S}tokes flow},
@@ -6670,6 +6609,20 @@
   mrnumber = {MR1950614 (2003m:76110)},
   owner = {logg},
   timestamp = {2009.06.07}
+}
+
+@MISC{MardalAlnaes2009,
+  author = {K.-A. Mardal and M. S. Aln{\ae}s},
+  title = {{SFC}: },
+  year = {2009},
+  note = {URL: \url{http://fenics.org/sfc}}
+}
+
+@MISC{MardalAlnaes2009a,
+  author = {K.-A.~Mardal and M. S. Aln{\ae}s},
+  title = {{SyFi}: },
+  year = {2009},
+  note = {URL: \url{http://fenics.org/syfi}}
 }
 
 @ARTICLE{MardalHentchelMyklebustEtAl2010,
@@ -6914,8 +6867,8 @@
 }
 
 @ARTICLE{MhurchuAndersonJamrozikEtAl2001,
-  author = {C. N. Mhurchu and C. Anderson and K. Jamrozik and G. Hankey and D. Dunbabin
-	},
+  author = {C. N. Mhurchu and C. Anderson and K. Jamrozik and G. Hankey and D.
+	Dunbabin },
   title = {Hormonal factors and risk of aneurysmal subarachnoid hemorrhage:
 	An international population-based, case-control study},
   journal = {Stroke},
@@ -7039,7 +6992,7 @@
 }
 
 @ARTICLE{MurrayLopez1997,
-  author = {C. J. L.  Murray and A. D. Lopez},
+  author = {C. J. L. Murray and A. D. Lopez},
   title = {Alternative projections of mortality and disability by cause 1990-2020:
 	Global Burden of Disease Study},
   journal = {The Lancet},
@@ -7054,8 +7007,8 @@
 
 @ARTICLE{NakaoKinoshita2008,
   author = {Nakao, M. T. and Kinoshita, T.},
-  title = {Some remarks on the behaviour of the finite element solution in
-	nonsmooth domains},
+  title = {Some remarks on the behaviour of the finite element solution in nonsmooth
+	domains},
   journal = {Applied Mathematics Letters},
   year = {2008},
   volume = {21},
@@ -7069,7 +7022,8 @@
 
 @PHDTHESIS{Narayanan2007,
   author = {Harish Narayanan},
-  title = {A Continuum Theory of Multiphase Mixtures for Modelling Biological Growth},
+  title = {A Continuum Theory of Multiphase Mixtures for Modelling Biological
+	Growth},
   school = {University of Michigan},
   year = {2007}
 }
@@ -7274,7 +7228,7 @@
   pages = {315--341},
   number = {3},
   month = oct,
-  issn = {0029-599X (print), 0945-3245 (electronic)},
+  issn = {0029-599X (print), 0945-3245 (electronic)}
 }
 
 @BOOK{OdenDemkowicz1996,
@@ -7524,7 +7478,7 @@
   title = {Incompressible flow},
   publisher = {John Wiley \& Sons Inc},
   year = {1984},
-  author = {Panton, RL},
+  author = {Panton, RL}
 }
 
 @ARTICLE{PasciakWang2006,
@@ -7800,6 +7754,18 @@
   file = {QuarteroniFormaggia2004.pdf:QuarteroniFormaggia2004.pdf:PDF},
   owner = {massing},
   timestamp = {2009.05.07}
+}
+
+@ARTICLE{Quigley2004,
+  author = {Quigley, M. F. and Iskandar, B. J. and Quigley, M. A. and Nicosia,
+	M. N. and Haughton, V.},
+  title = {Cerebrospinal fluid flow in foramen magnum: {T}emporal and spatial
+	patterns at {MR} imaging in volunteers and in patients with {C}hiari
+	{I} malformation},
+  journal = {Radiology},
+  year = {2004},
+  volume = {232},
+  pages = {229-236}
 }
 
 @UNPUBLISHED{www:tnt,
@@ -8543,8 +8509,8 @@
 
 @ARTICLE{Stenberg1995,
   author = {Stenberg, R.},
-  title = {On some techniques for approximating boundary conditions in the
-	finite element method},
+  title = {On some techniques for approximating boundary conditions in the finite
+	element method},
   journal = {Journal of Computational and Applied Mathematics},
   year = {1995},
   volume = {63},
@@ -8565,6 +8531,20 @@
   volume = {42},
   pages = {9--23},
   number = {165}
+}
+
+@ARTICLE{SternSongEtAl1999,
+  author = {M. D. Stern and L. S. Song and H. Cheng and J. S. Sham and H. T.
+	Yang and K. R. Boheler and E. R\'{i}os},
+  title = {Local control models of cardiac excitation-contraction coupling.
+	A possible role for allosteric interactions between ryanodine receptors.},
+  journal = {J. Gen. Physiol.},
+  year = {1999},
+  volume = {113},
+  pages = {469--489},
+  number = {3},
+  month = {Mar},
+  timestamp = {2009.06.06}
 }
 
 @ARTICLE{Stewartson1981,
@@ -8859,13 +8839,6 @@
   year = {2009}
 }
 
-@PHDTHESIS{Van2009,
-  author = {van der Zee, K. G.},
-  title = {Goal-Adaptive Discretization of Fluid-Structure Interaction},
-  school = {Technische Universiteit Delft},
-  year = {2009}
-}
-
 @ARTICLE{VardapetyanDemkowicz2002,
   author = {Vardapetyan, L. and Demkowicz, L.},
   title = {{hp}-Vector finite elements method for the full-wave analysis of
@@ -8932,8 +8905,8 @@
 
 @ARTICLE{Verfurth2003,
   author = {Verf{\"u}rth, R.},
-  title = {A posteriori error estimates for finite element discretizations
-	of the heat equation},
+  title = {A posteriori error estimates for finite element discretizations of
+	the heat equation},
   journal = {Calcolo},
   year = {2003},
   volume = {40},
@@ -8987,7 +8960,8 @@
 }
 
 @BOOK{VersteegMalalasekera2007,
-  title = {An Introduction to Computational Fluid Dynamics: The Finite Volume Method},
+  title = {An Introduction to Computational Fluid Dynamics: The Finite Volume
+	Method},
   publisher = {Prentice Hall},
   year = {2007},
   author = {Versteeg, H. K. and Malalasekera, W. },
@@ -9111,18 +9085,6 @@
   timestamp = {2009.06.07}
 }
 
-@ARTICLE{WeiKirbySinha1999,
-  author = {G. Wei and J. T. Kirby and A. Sinha},
-  title = {Generation of waves in {B}oussinesq models using a source function
-	method},
-  journal = {Coastal Engineering},
-  year = {1999},
-  volume = {36},
-  pages = {271-279},
-  owner = {logg},
-  timestamp = {2009.06.07}
-}
-
 @ARTICLE{WeiKirby1995,
   author = {Ge Wei and James T. Kirby},
   title = {Time-Dependent Numerical Code for Extended {B}oussinesq Equations},
@@ -9136,6 +9098,18 @@
   publisher = {ASCE},
   timestamp = {2009.06.07},
   url = {http://link.aip.org/link/?QWW/121/251/1}
+}
+
+@ARTICLE{WeiKirbySinha1999,
+  author = {G. Wei and J. T. Kirby and A. Sinha},
+  title = {Generation of waves in {B}oussinesq models using a source function
+	method},
+  journal = {Coastal Engineering},
+  year = {1999},
+  volume = {36},
+  pages = {271-279},
+  owner = {logg},
+  timestamp = {2009.06.07}
 }
 
 @ARTICLE{Weir2002,
@@ -9238,6 +9212,15 @@
   timestamp = {2009.06.07}
 }
 
+@INPROCEEDINGS{WilbersLangtangenO2009,
+  author = {Wilbers, I. M. and Langtangen, H. P. and \O deg\aa rd, \AA.},
+  title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
+  booktitle = {MekIT'09, Fifth national conference on Computational Mechanics},
+  year = {2009},
+  editor = {B.~Skallerud and H.~I.~Andersson},
+  publisher = {Tapir Academic Press}
+}
+
 @INPROCEEDINGS{WilbersLangtangenOdegaard2009,
   author = {{Wilbers, I. M. and Langtangen, H. P. and {\O}deg\aa rd}, {\r A}.},
   title = {{U}sing {C}ython to {S}peed up {N}umerical {P}ython {P}rograms},
@@ -9336,6 +9319,25 @@
   author = {M. M. Zdravkovich}
 }
 
+@ARTICLE{ZeeBrummelenBorst2008a,
+  author = {van der Zee, KG and van Brummelen, EH and de Borst, R.},
+  title = {{Goal-oriented error estimation for Stokes flow interacting with
+	a flexible channel}},
+  journal = {International Journal for Numerical Methods in Fluids},
+  year = {2008},
+  volume = {56},
+  pages = {1551--1557},
+  number = {8},
+  publisher = {John Wiley \& Sons}
+}
+
+@PHDTHESIS{Van2009,
+  author = {van der Zee, K. G.},
+  title = {Goal-Adaptive Discretization of Fluid-Structure Interaction},
+  school = {Technische Universiteit Delft},
+  year = {2009}
+}
+
 @ARTICLE{ZeeBrummelenBorst,
   author = {van der Zee, K. G. and van Brummelen, E. H. and de Borst, R.},
   title = {{GOAL-ORIENTED ERROR ESTIMATION AND ADAPTIVITY FOR FREE-BOUNDARY
@@ -9353,18 +9355,6 @@
   owner = {massing},
   publisher = {Submitted},
   timestamp = {2009.05.25}
-}
-
-@ARTICLE{ZeeBrummelenBorst2008a,
-  author = {van der Zee, KG and van Brummelen, EH and de Borst, R.},
-  title = {{Goal-oriented error estimation for Stokes flow interacting with
-	a flexible channel}},
-  journal = {International Journal for Numerical Methods in Fluids},
-  year = {2008},
-  volume = {56},
-  pages = {1551--1557},
-  number = {8},
-  publisher = {John Wiley \& Sons}
 }
 
 @CONFERENCE{ZeeBrummelenBorst2006,
@@ -9405,8 +9395,18 @@
   url = {http://www.sciencedirect.com/science/article/B6V4F-4D8VFVK-1/2/f20de8fc8ea73d8c737a74816ea82726}
 }
 
+@BOOK{ZienkiewiczTaylorZhu2005firstpublishedin1967,
+  title = {The Finite Element Method --- Its Basis and Fundamentals, 6th edition},
+  publisher = {Elsevier},
+  year = {2005},
+  author = {O. C. Zienkiewicz and R. L. Taylor and J. Z. Zhu},
+  comment = {Book was first published in 1967},
+  owner = {logg},
+  timestamp = {2009.06.06}
+}
+
 @ARTICLE{ZienkiewiczZhu1987,
-  author = {Zienkiewicz, O. C.  and Zhu, J. Z.},
+  author = {Zienkiewicz, O. C. and Zhu, J. Z.},
   title = {{A simple error estimator and adaptive procedure for practical engineerng
 	analysis}},
   journal = {International Journal for Numerical Methods in Engineering},
@@ -9415,16 +9415,6 @@
   number = {2},
   owner = {logg},
   publisher = {John Wiley \& Sons, Ltd New York},
-  timestamp = {2009.06.06}
-}
-
-@BOOK{ZienkiewiczTaylorZhu2005firstpublishedin1967,
-  title = {The Finite Element Method --- Its Basis and Fundamentals, 6th edition},
-  publisher = {Elsevier},
-  year = {2005},
-  author = {O. C. Zienkiewicz and R. L. Taylor and J. Z. Zhu},
-  comment = {Book was first published in 1967},
-  owner = {logg},
   timestamp = {2009.06.06}
 }
 
@@ -9508,6 +9498,19 @@
 @ELECTRONIC{Semtex,
   title = {Semtex spectral element {DNS} code, \url{http://users.monash.edu.au/~bburn/semtex.html}},
   url = {http://users.monash.edu.au/~bburn/semtex.html}
+}
+
+@UNPUBLISHED{Siloon,
+  title = {{SILOON}, {S}cripting {I}nterface {L}anguages for {O}bject-{O}riented
+	{N}umerics},
+  note = {\url{http://acts.nersc.gov/siloon/index.html}},
+  key = {{SILOON}}
+}
+
+@UNPUBLISHED{SIP,
+  title = {{SIP}; {P}ython extension module generator},
+  note = {\url{http://www.riverbankcomputing.com/software/sip/intro}},
+  key = {SIP}
 }
 
 @ELECTRONIC{ublas,
@@ -9655,6 +9658,18 @@
   timestamp = {2009.06.06}
 }
 
+@UNPUBLISHED{www:python-capi,
+  title = {{Python C API Reference Manual}},
+  note = {\url{http://docs.python.org/c-api}},
+  key = {Python C-API}
+}
+
+@UNPUBLISHED{www:python-extending,
+  title = {{E}xtending and {E}mbedding the {P}ython {I}nterpreter},
+  note = {\url{http://docs.python.org/extending}},
+  key = {extending Python}
+}
+
 @UNPUBLISHED{www:swiginac,
   title = {Swiginac {P}ython interface to {GiNaC}},
   note = {{\url{http://swiginac.berlios.de}}},
@@ -9718,89 +9733,6 @@
   owner = {logg},
   timestamp = {2009.06.06}
 }
-
-
-@Book{Langtangen2008,
-  author = {Langtangen, Hans Petter},
-  title = {Python Scripting for Computational Science},
-  year = {2008},
-  abstract = {},
-  publisher = {Springer},
-  address = {Heidelberg},
-  edition = {third},
-  isbn = {978-3-540-73915-9}
-}
-
-
-@Inbook{Langtangen2003b,
-  author = {Langtangen, H P and Mardal, K -A},
-  title = {Using Diffpack from Python Scripts},
-  year = {2003},
-  abstract = {},
-  booktitle = {Advanced Topics in Computational Partial
-                   Differential Equations - Numerical Methods and
-                   Diffpack Programming},
-  editor = {Langtangen, H.P. and Tveito, A.},
-  publisher = {Springer-Verlag},
-  series = {Lecture Notes in Computational Science and
-                   Engineering},
-  pages = {321-360}
-}
-
-
-@ARTICLE{SternSongEtAl1999,
-  author = {M. D. Stern and L. S. Song and H. Cheng and J. S. Sham and H. T.
-       Yang and K. R. Boheler and E. R\'{i}os},
-  title = {Local control models of cardiac excitation-contraction coupling.
-       A possible role for allosteric interactions between ryanodine receptors.},
-  journal = {J. Gen. Physiol.},
-  year = {1999},
-  volume = {113},
-  pages = {469--489},
-  number = {3},
-  month = {Mar},
-  timestamp = {2009.06.06}
-}
-
-
-@UNPUBLISHED{www:python-capi,
-  title = {{Python C API Reference Manual}},
-  note = {\url{http://docs.python.org/c-api}},
-  key = {Python C-API},
-}
-
-@UNPUBLISHED{www:python-extending,
-  title = {{E}xtending and {E}mbedding the {P}ython {I}nterpreter},
-  note = {\url{http://docs.python.org/extending}},
-  key = {extending Python},
-}
-
-@UNPUBLISHED{SIP,
-  title = {{SIP}; {P}ython extension module generator},
-  note = {\url{http://www.riverbankcomputing.com/software/sip/intro}},
-  key = {SIP},
-}
-
-
-@UNPUBLISHED{Siloon,
-  title = {{SILOON}, {S}cripting {I}nterface {L}anguages for {O}bject-{O}riented {N}umerics},
-  note = {\url{http://acts.nersc.gov/siloon/index.html}},
-  key = {{SILOON}},
-}
-
-@ARTICLE{GreensteinEtAl2002,
-  author = {Joseph L Greenstein and Raimond L Winslow},
-  title = {An integrative model of the cardiac ventricular myocyte incorporating
-       local control of {C}a$^{2+}$ release.},
-  journal = {Biophys. J.},
-  year = {2002},
-  volume = {83},
-  pages = {2918--2945},
-  number = {6},
-  month = {Dec},
-  url = {http://www.biophysj.org/cgi/content/full/83/6/2918}
-}
-
 
 @comment{jabref-meta: fileDirectory:.;}
 
