Add revised version of chapter [kirby-5]

--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ Things to check
 * Add items to index, should be used in all chapters
 * Problem with numbers in Palatino, 0 looks like o. See FFC chapter
   for an example ("Stage 0").
+* Use of new macro \foralls
 
 Things to discuss
 
