Add item to TODO list

--- a/TODO
+++ b/TODO
@@ -6,6 +6,7 @@ Things to check
 * Problem with numbers in Palatino, 0 looks like o. See FFC chapter
   for an example ("Stage 0").
 * Use of new macro \foralls
+* Use of \nedelec and other name macros
 
 Things to discuss
 
