--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@ Things to check
   for an example ("Stage 0").
 * Use of new macro \foralls
 * Use of \nedelec and other name macros
+* Fix wrapping of chapter titles
 
 Things to discuss
 
