--- a/bibliography.bib
+++ b/bibliography.bib
@@ -21,6 +21,35 @@
   timestamp = {2009.06.06}
 }
 
+@article{ArnoldBrezziFortin1984,
+  author = {Arnold, D. N. and Brezzi, F. and Fortin, M.},
+  title = {A stable finite element for the {S}tokes equations},
+  journal = {Calcolo},
+  fjournal = {Calcolo. A Quarterly on Numerical Analysis and Theory of Computation},
+  volume = {21},
+  year = {1984},
+  number = {4},
+  pages = {337--344 (1985)},
+  issn = {0008-0624},
+  coden = {CDABAE},
+  mrclass = {65N30 (76-08 76D07)},
+  mrnumber = {MR799997 (86m:65136)},
+  mrreviewer = {Gheorghe Micula},
+  abstract = {
+We present in this paper a new velocity-pressure finite
+element for the computation of Stokes flow.  We discretize the velocity
+field iwth continuous piecewise linear functions enriched by bubble
+functions, and the pressure by piecewise linear functions.  We show
+that this element satisfies the usual inf-sup condition and converges
+with first order for both velocities and pressures.  Finally we relate
+this element to families of higher order elements and to the popular
+Taylor-Hood element.
+},
+  keywords = {finite element, Stokes equations},
+  subjclass = {65N30},
+  pdf = {http://umn.edu/~arnold/papers/mini.pdf}
+}
+
 @ARTICLE{OlgaardLoggWells2008,
   author = {K. B. \O{}lgaard and A. Logg and G. N. Wells},
   title = {Automated code generation for discontinuous {G}alerkin methods},
@@ -45,7 +74,7 @@
   url = {http://dx.doi.org/10.1145/1644001.1644009}
 }
 
-@MANUAL{vCertikothers2009,
+@MANUAL{Certikothers2009,
   title = {{SymPy}},
   author = {Ond\v{r}ej \v{C}ert\'{i}k and others},
   year = {2009},
@@ -54,7 +83,7 @@
   timestamp = {2009.06.07}
 }
 
-@BOOK{vSolinSegethDolevzel2004,
+@BOOK{SolinSegethDolevzel2004,
   title = {Higher-order finite element methods},
   publisher = {Chapman \& Hall/CRC, Boca Raton, FL},
   year = {2004},
@@ -81,6 +110,22 @@
   file = {Abdul-RahmanKasper2008.pdf:Abdul-RahmanKasper2008.pdf:PDF},
   owner = {massing},
   timestamp = {2009.05.27}
+}
+
+@article {AdamsCockburn2005,
+   author = {Adams, Scot and Cockburn, Bernardo},
+   affiliation = {University of Minnesota School of Mathematics Minneapolis MN 55455 U.S.A Minneapolis MN 55455 U.S.A},
+   title = {A Mixed Finite Element Method for Elasticity in Three Dimensions},
+   journal = {Journal of Scientific Computing},
+   publisher = {Springer Netherlands},
+   issn = {0885-7474},
+   keyword = {Mathematics and Statistics},
+   pages = {515-521},
+   volume = {25},
+   issue = {3},
+   url = {http://dx.doi.org/10.1007/s10915-004-4807-3},
+   note = {10.1007/s10915-004-4807-3},
+   year = {2005}
 }
 
 @ARTICLE{AdamGourdinNedelecEtAl1980,
@@ -1463,6 +1508,15 @@
   pages = {129--151},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARTICLE{BrezziDouglasDuranFortin1987,
+  author = {F. Brezzi and J. Douglas and R. Duran and M. Fortin},
+  title = {Mixed finite elements for second order elliptic problems in three variable},
+  journal = {Numerische Matematik},
+  year = {1987},
+  volume = {51},
+  pages = {237--250},
 }
 
 @ARTICLE{BrezziDouglasFortinEtAl1987,
@@ -2933,6 +2987,25 @@
   title = {{Cython}: C-Extensions for {Python}},
   year = {2009},
   note = {URL: \url{http://cython.org}}
+}
+
+@ARTICLE{FarhloulFortin1997,
+  author = {Farhloul, Mohamed and Fortin, Michel},
+  title = {Dual hybrid methods for the elasticity and the {S}tokes problems:
+	a unified approach},
+  journal = {Numer. Math.},
+  year = {1997},
+  volume = {76},
+  pages = {419--440},
+  number = {4},
+  coden = {NUMMA7},
+  fjournal = {Numerische Mathematik},
+  issn = {0029-599X},
+  mrclass = {65N30 (73V05 76M10)},
+  mrnumber = {MR1464150 (98f:65106)},
+  mrreviewer = {JiChun Li},
+  owner = {meg},
+  timestamp = {2009.07.23}
 }
 
 @CONFERENCE{FalgoutYang2002,
