--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ Things to check
 * Use of new macro \foralls
 * Use of \nedelec and other name macros
 * Fix wrapping of chapter titles
+* multiindex or multi-index?
 
 Things to discuss
 
