--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1222,6 +1222,22 @@ Taylor-Hood element.
   timestamp = {2009.06.06}
 }
 
+@ARTICLE{BientinesiGunnelsMyersEtAl2005,
+  author = {Bientinesi, Paolo and Gunnels, John a. and Myers, Margaret E. and
+                  Quintana-Ort\'{\i}, Enrique S. and Geijn, Robert a. Van De},
+  doi = {10.1145/1055531.1055532},
+  file = {:Users/aterrel/Research/articles/p1-bientinesi.pdf:pdf},
+  issn = {00983500},
+  journal = {ACM Transactions on Mathematical Software},
+  month = {March},
+  number = {1},
+  pages = {1--26},
+  title = {The science of deriving dense linear algebra algorithms},
+  url = {http://portal.acm.org/citation.cfm?doid=1055531.1055532},
+  volume = {31},
+  year = {2005}
+}
+
 @ARTICLE{BinghamMadsenFuhrman2008,
   author = {Harry B. Bingham and Per A. Madsen and David R. Fuhrman},
   title = {Velocity potential formulations of highly accurate {B}oussinesq-type
@@ -7558,6 +7574,15 @@ Taylor-Hood element.
   edition = {Third},
   owner = {elezar},
   timestamp = {2007.10.12}
+}
+
+@ARTICLE{Prim1957,
+  author = {R. C. Prim},
+  title = {Shortest connection networks and some generalizations},
+  journal = {Bell System Technical Journal},
+  volume = {36},
+  year = {1957},
+  pages = {1389--1401}
 }
 
 @INPROCEEDINGS{Prudhomme2006,
