Add note to TODO list

--- a/TODO
+++ b/TODO
@@ -9,6 +9,7 @@ Things to check
 * Use of \nedelec and other name macros
 * Fix wrapping of chapter titles
 * multiindex or multi-index?
+* command line or command-line
 
 Things to discuss
 
