--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5059,12 +5059,12 @@ Taylor-Hood element.
 }
 
 @ARTICLE{KirbyScott2007,
-  author = {Robert C. Kirby and L. Ridgway Scott},
-  title = {Geometric optimization of the evaluation of finite element matrices},
-  journal = {to appear in SIAM J. Sci. Comput.},
-  year = {2007},
-  owner = {logg},
-  timestamp = {2009.06.06}
+  author = {Kirby, R.C. and Scott, L.R.},
+  journal = {SIAM Journal on Scientific Computing},
+  volume = {29},
+  number = {2},
+  pages = {827--841},
+  year = {2008},
 }
 
 @ARTICLE{KirbyStroutHovlandEtAl2005,
