--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@ Things to check
 * Fix wrapping of chapter titles
 * multiindex or multi-index?
 * command line or command-line
+* Use \leqslant instead of \leq?
 
 Things to discuss
 
