Work on removing duplicate references between UFL chapter and the rest.
Fixed most of my FEniCS related references.

Marked some references (also some outside the UFL related section in bibliography.bib) with FIXME comments.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -294,6 +294,7 @@ Taylor-Hood element.
   timestamp = {2009.06.07}
 }
 
+@comment{FIXME published duplicate}
 @ARTICLE{AlnaesLoggMardalEtAl2009,
   author = {M. S. Aln\ae{}s and A. Logg and K.-A. Mardal and O. Skavhaug and
 	H. P. Langtangen},
@@ -305,6 +306,7 @@ Taylor-Hood element.
   timestamp = {2009.06.07}
 }
 
+@comment{FIXME published duplicate}
 @ARTICLE{AlnaesLoggMardalEtAl2008,
   author = {M. S. Aln\ae{}s and A. Logg and K.-A. Mardal and O. Skavhaug and
 	H. P. Langtangen},
@@ -339,6 +341,7 @@ Taylor-Hood element.
   note = {URL: \url{http://fenics.org/ufc}}
 }
 
+@comment{FIXME published}
 @ARTICLE{AlnaesLoggMardalEtAl2009a,
   author = {Martin S. Aln{\ae}s and Anders Logg and Kent-Andre Mardal and Ola
 	Skavhaug and Hans Petter Langtangen},
@@ -362,6 +365,7 @@ Taylor-Hood element.
   timestamp = {2009.06.06}
 }
 
+@comment{FIXME}
 @ARTICLE{AlnaesMardal2009b,
   author = {Aln{\ae}s, Martin Sandve and Mardal, Kent-Andre},
   title = {On the Efficiency of Symbolic Computations Combined with Code Generation
@@ -372,6 +376,7 @@ Taylor-Hood element.
   timestamp = {2009.06.07}
 }
 
+@comment{FIXME}
 @ARTICLE{AlnaesMardal2008,
   author = {Aln{\ae}s, Martin Sandve and Mardal, Kent-Andre},
   title = {Symbolic Computations and Code Generation for Finite Element Methods},
@@ -6246,7 +6251,7 @@ Taylor-Hood element.
   note = {URL: \url{http://fenics.org/dolfin}}
 }
 
-@ARTICLE{LoggWells2010,
+@ARTICLE{LoggWells2009,
   author = {A. Logg and G. N. Wells},
   title = {{DOLFIN}: {A}utomated Finite Element Computing},
   journal = {ACM Transactions on Mathematical Software},
@@ -9688,9 +9693,24 @@ Taylor-Hood element.
   timestamp = {2010.12.01}
 }
 
+@comment{jabref-meta: fileDirectory:.;}
 
-@comment{BEGINNING OF UFL CHAPTER BIBLIOGRAPHY}
+@comment{jabref-meta: groupsversion:3;}
 
+@comment{jabref-meta: groupstree:
+0 AllEntriesGroup:;
+1 ExplicitGroup:Nitsche Methods\;0\;;
+1 ExplicitGroup:ALE\;0\;;
+1 ExplicitGroup:Error estimators and adaptivity\;0\;;
+2 ExplicitGroup:Goal oriented error estimators\;0\;;
+2 ExplicitGroup:Residual-based\;0\;;
+}
+
+
+
+@comment{BEGIN UFL CHAPTER BIBLIOGRAPHY}
+
+@comment{FIXME duplicate}
 @book{Cia78,
     author = {P. G. Ciarlet},
     title = {The Finite Element Method for Elliptic Problems},
@@ -9700,6 +9720,7 @@ Taylor-Hood element.
 
 % ------------------------ FEniCS software references
 
+@comment{FIXME duplicate}
 @misc{www:fenics,
     author = {{FE}ni{CS}},
     title = {{FE}ni{CS} Project},
@@ -9707,6 +9728,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @misc{www:dolfin,
     author = {A. Logg and G. N. Wells and others},
     title = { {DOLFIN} },
@@ -9714,6 +9736,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @misc{www:ffc,
     author = {A. Logg and others},
     title = { {FFC} },
@@ -9721,6 +9744,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @misc{www:syfi,
     author = {M. S. Aln\ae{}s and K.-A. Mardal},
     title = { {SyFi} },
@@ -9728,6 +9752,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @misc{www:ufc,
     author = {M. S. Aln\ae{}s and H.-P. Langtangen and A.Logg and K.-A. Mardal and O. Skavhaug},
     title = { {UFC} },
@@ -9735,6 +9760,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @misc{www:ufl,
     author = {Martin S. Aln\ae{}s and Anders Logg},
     title = { {UFL} },
@@ -9744,6 +9770,7 @@ Taylor-Hood element.
 
 % ------------------------ FEniCS manual references
 
+@comment{FIXME duplicate}
 @manual{manual:dolfin,
     author = {A. Logg and G. N. Wells and others},
     title = {{DOLFIN} User Manual},
@@ -9751,6 +9778,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @manual{manual:ffc,
     author = {A. Logg},
     title = {{FFC} User Manual},
@@ -9758,6 +9786,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @manual{manual:syfi,
     author = {M. S. Aln\ae{}s and K.-A. Mardal},
     title = {{SyFi} User Manual},
@@ -9765,6 +9794,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @manual{manual:ufc,
     author = {M. S. Aln\ae{}s and H.-P. Langtangen and A.Logg and K.-A. Mardal and O. Skavhaug},
     title = {{UFC} Specification and User Manual},
@@ -9772,6 +9802,7 @@ Taylor-Hood element.
     year = {2009},
 }
 
+@comment{FIXME duplicate}
 @manual{manual:ufl,
     author = {M. S. Aln\ae{}s and A.Logg},
     title = {{UFL} Specification and User Manual},
@@ -9782,160 +9813,13 @@ Taylor-Hood element.
 
 % ------------------------ FEniCS related papers:
 
-@article{AlnMar2009,
-  author = {Aln{\ae}s, Martin Sandve and Mardal, Kent-Andre},
-  title = {On the Efficiency of Symbolic Computations Combined with Code Generation for Finite Element Methods},
-  year = {2009},
-  abstract = {Efficient and easy implementation of variational forms for finite element discretization can be accomplished with meta-programming. Using a high-level language like Python and symbolic mathematics makes an abstract problem definition possible, but the use of a low-level compiled language is vital for run-time efficiency. By generating low-level C++ code based on symbolic expressions for the discrete weak form, it is possible to accomplish a high degree of abstraction in the problem definition while surpassing the run-time efficiency of traditional hand written C++ codes. We provide several examples where we demonstrate orders of magnitude in speed-up.},
-  note = {Submitted.}
-}
-
-@inproceedings{AlnMar2007,
-  author = {M. S. Aln{\ae}s and K.-A. Mardal and J. Sundnes},
-  title = {Application of symbolic finite element tools to nonlinear hyperelasticity},
-  year = {2007},
-  URL = {http://simula.no/research/scientific/publications/Simula.SC.22/downloadPdfFile},
-  abstract = {The present paper addresses the use of high level languages, symbolic
-mathematical tools and code generation in an implementation of the finite
-element method, using a nonlinear hyperelasticity equation as example.
-Advantages of the software development method that will be demonstrated
-include closeness to the mathematics, enabling high human efficiency with
-easy to use high level languages, while still keeping a high computational
-efficiency by generating tailored inner loop code for the problem at hand.
-The application we have in mind for the equations presented here is the
-simulation of the passive elastic properties of heart and blood vessel
-tissue.},
-  booktitle = {Fourth national conference on Computational Mechanics (MekIT'07)},
-  isbn = {978-82-519-2235-7},
-  editor = {B. Skallerud and H.I. Andersson},
-  publisher = {Tapir Academic Press},
-  address = {NO-7005 Trondheim},
-  pages = {87-101},
-  totalpages = {330}
-}
-
-% Warning--no number and no volume in ufc-ijcse
-% Warning--page numbers missing in ufc-ijcse
-@article{AlnLog2009,
-   author = {M. S. Aln\ae{}s and A. Logg and K.-A. Mardal and O. Skavhaug and H. P. Langtangen},
-   title = {{U}nified {F}ramework for {F}inite {E}lement {A}ssembly},
-   year = {2009}, 
-   journal = {International Journal of Computational Science and Engineering},
-   note = {Accepted for publication. Preprint: \url{http://simula.no/research/scientific/publications/Simula.SC.96}},
-}
-
-% TODO: Ølgaards paper will change title...
+@comment{FIXME Ølgaards paper will change title... What is it now?}
 @article{OelWel2009,
     author  = {K. B. {\O}lgaard and G. N. Wells},
     title   = {Representations of finite element tensors via automated code generation},
     year    = {2009},
     note    = {Submitted, \url{ http://www.dspace.cam.ac.uk/handle/1810/214789}}
 }
-
-@techreport{DupHof2003,
-    author = {T. Dupont and J. Hoffman and C. Johnson and R. C. Kirby and M. G. Larson and A. Logg and L. R. Scott},
-    title = {The {FE}ni{CS} project},
-    institution = {Chalmers Finite Element Center Preprint Series},
-    number = {2003--21},
-    year = {2003},
-}
-
-@article{LogWel2009,
-    author = {A. Logg and G. N. Wells},
-    title  = {{DOLFIN}: {A}utomated finite element computing },
-    journal = {Submitted},
-    year   = {2009},
-    url    = {http://www.fenics.org/pub/documents/dolfin/papers/dolfin-2009.pdf},
-}
-
-@article{Log2007,
-    author = {A. Logg},
-    title = {Automating the Finite Element Method},
-	journal = {Archives of Computational Methods in Engineering},
-    volume = {14},
-    number = {2},
-    pages = {93--138},
-    year = {2007},
-	month = jun,
-    issn = {1134-3060},
-	url = {http://dx.doi.org/10.1007/s11831-007-9003-9},
-	doi = {10.1007/s11831-007-9003-9},
-}
-%    journal = {Arch. Comput. Methods Eng.},
-
-@article{KirLog2006,
-    author = {R. C. Kirby and A. Logg},
-    title = {A Compiler for Variational Forms},
-    journal = {{ACM} Transactions on Mathematical Software},
-    volume = {32},
-    number = {3},
-    pages = {417--444},
-    year = {2006},
-    issn = {0098-3500},
-	url = {http://portal.acm.org/citation.cfm?id=1163644},
-	doi = {10.1145/1163641.1163644},
-	abstract = {As a key step towards a complete automation of the finite element method, we present a new algorithm for automatic and efficient evaluation of multilinear variational forms. The algorithm has been implemented in the form of a compiler, the {FEniCS} Form Compiler {(FFC).} We present benchmark results for a series of standard variational forms, including the incompressible {Navier--Stokes} equations and linear elasticity. The speedup compared to the standard quadrature-based approach is impressive; in some cases the speedup is as large as a factor of 1000.},
-	keywords = {automation,compiler,finite element,variational form},
-}
-%	journal = {{ACM} Trans. Math. Softw.},
-
-@article{KirLog2007,
-    author = {R. C. Kirby and A. Logg},
-    title = {Efficient Compilation of a Class of Variational Forms},
-    journal = {{ACM} Transactions on Mathematical Software},
-    volume = {33},
-    number = {3},
-    year = {2007},
-    issn = {0098-3500},
-	url = {http://portal.acm.org/citation.cfm?doid=1268769.1268771},
-	doi = {10.1145/1268769.1268771},
-	keywords = {automation,blas,compiler,finite element,granularity,loop hoisting,monomials,variational form},
-	abstract = {We investigate the compilation of general multilinear variational forms over affines simplices and prove a representation theorem for the representation of the element tensor (element stiffness matrix) as the contraction of a constant reference tensor and a geometry tensor that accounts for geometry and variable coefficients. Based on this representation theorem, we design an algorithm for efficient pretabulation of the reference tensor. The new algorithm has been implemented in the {FEniCS} Form Compiler {(FFC)} and improves on a previous loop-based implementation by several orders of magnitude, thus shortening compile-times and development cycles for users of {FFC.}},
-}
-%	journal = {{ACM} Trans. Math. Softw.},
-
-@article{OelLog2008,
-    author  = {K. B. \O{}lgaard and A. Logg and G. N. Wells},
-    title   = {Automated code generation for discontinuous Galerkin methods},
-	journal = {{SIAM} Journal on Scientific Computing},
-    year    = {2008},
-    volume  = {31},
-    number  = {2},
-    pages   = {849--864},
-    url     = {http://dx.doi.org/10.1137/070710032},
-	doi     = {10.1137/070710032},
-	keywords = {code generation,discontinuous Galerkin methods,finite element,form compiler,variational forms},
-}
-
-% FIAT
-@article{Kir2006,
-	title = {Optimizing {FIAT} with level 3 {BLAS}},
-	volume = {32},
-	url = {http://portal.acm.org/citation.cfm?id=1141885.1141889&coll=GUIDE&dl=GUIDE&CFID=35011842&CFTOKEN=29677782},
-	doi = {10.1145/1141885.1141889},
-	abstract = {Our previous work on {FIAT} {(Finite} Element Automatic Tabulator) developed a “computational representation theory ” that allowed us to construct arbitrary order instances of a wide range of finite elements, many of which are infrequently used owing to their associated code complexity. In our present work, we further hone this theory by rephrasing most of the internal operations as linear transformations over finite-dimensional Banach spaces. This additional insight has led to increased code granularity and allowed the use of level 3 {BLAS} operations. This is both a conceptual and a practical development; as the run-time performance of {FIAT} has been improved multiple orders of magnitude.},
-	number = {2},
-	journal = {{ACM} Trans. Math. Softw.},
-	author = {Robert C. Kirby},
-	year = {2006},
-	keywords = {finite element,hilbert space,numerical linear algebra},
-	pages = {223--235}
-},
-
-% FErari
-@article{KirLog2008,
-	title = {Benchmarking {Domain-Specific} Compiler Optimizations for Variational Forms},
-	volume = {35},
-	url = {http://portal.acm.org/citation.cfm?id=1377612.1377614&coll=GUIDE&dl=GUIDE&CFID=35011842&CFTOKEN=29677782},
-	doi = {10.1145/1377612.1377614},
-	abstract = {We examine the effect of using complexity-reducing relations {[Kirby} et al. 2006] to generate optimized code for the evaluation of finite-element variational forms. The optimizations are implemented in a prototype code named {FErari,} which has been integrated as an optimizing backend to the {FEniCS} form compiler, {FFC} {[Kirby} and Logg 2006; 2007]. In some cases, {FErari} provides very little speedup, while in other cases we obtain reduced local operation counts by a factor of as much as 7.9 and speedups for the assembly of the global sparse matrix by as much as a factor of 2.8 (see Figure 9).},
-	number = {2},
-	journal = {{ACM} Trans. Math. Softw.},
-	author = {Robert C. Kirby and Anders Logg},
-	year = {2008},
-	keywords = {compiler,complexity-reducing relations,ferari,ffc,finite element method,optimization,variational form},
-	pages = {1--18}
-},
 
 % ------------------------ External software references
 
@@ -10264,20 +10148,5 @@ of the expressions.},
 	pages = {361--376}
 },
 
-@comment{END OF UFL CHAPTER BIBLIOGRAPHY}
-
-
-
-@comment{jabref-meta: fileDirectory:.;}
-
-@comment{jabref-meta: groupsversion:3;}
-
-@comment{jabref-meta: groupstree:
-0 AllEntriesGroup:;
-1 ExplicitGroup:Nitsche Methods\;0\;;
-1 ExplicitGroup:ALE\;0\;;
-1 ExplicitGroup:Error estimators and adaptivity\;0\;;
-2 ExplicitGroup:Goal oriented error estimators\;0\;;
-2 ExplicitGroup:Residual-based\;0\;;
-}
+@comment{END UFL CHAPTER BIBLIOGRAPHY}
 
