--- a/TODO
+++ b/TODO
@@ -11,6 +11,7 @@ Things to check
 * multiindex or multi-index?
 * command line or command-line
 * Use \leqslant instead of \leq?
+* Check for use of \mathcal{T}_h instead of \mathcal{T}
 
 Things to discuss
 
