Add a couple of notes

--- a/TODO
+++ b/TODO
@@ -12,9 +12,11 @@ Things to check
 * command line or command-line
 * Use \leqslant instead of \leq?
 * Check for use of \mathcal{T}_h instead of \mathcal{T}
+* use of "... ; that is, ..."
 
 Things to discuss
 
 * Should there be , after and?
 * Use of "..." vs ``...''
 * Use of "etc" vs "etc."
+* Figure out where to put code examples and refer to them
