Correction in bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2390,8 +2390,7 @@ Taylor-Hood element.
 }
 
 @ARTICLE{DAVIESREMUZZIGORDONEtAl1986,
-  author = {PETER F. DAVIES AND ANDREA REMUZZI AND ETHEL J. GORDON AND C. FORBES
-	DEWEY AND MICHAEL GIMBRONE },
+  author = {Peter F. Davies and Andrea Remuzzi and Ethel J. Gordon and C. Forbes Dewey and Michael Gimbrone},
   title = {Turbulent fluid shear stress induces vascular endothelial cell turnover
 	in vitro},
   journal = {Proc. Natl. Acad. Sci. USA},
@@ -9839,7 +9838,7 @@ Taylor-Hood element.
 
 @incollection{Kuc2007,
     title = {Python’s Dictionary Implementation: Being All Things to All People},
-    chapter = {18}, 
+    chapter = {18},
     author={Kuchling, A.},
 	booktitle = {Beautiful code},
 	isbn = {9780596510046},
@@ -9860,14 +9859,14 @@ Taylor-Hood element.
 }
 
 @misc{www:ginac,
-    author = {C. Bauer and C. Dams and  A. Frink and V. V. Kisil and R. Kreckel and  A. Sheplyakov and  J. Vollinga}, 
+    author = {C. Bauer and C. Dams and  A. Frink and V. V. Kisil and R. Kreckel and  A. Sheplyakov and  J. Vollinga},
     title = {{GiNaC}},
     year = 2009,
     note = { \url{http://www.ginac.de}}
 }
 
 @misc{www:swiginac,
-    author = {O. Skavhaug and O. \v{C}ert\'{i}k}, 
+    author = {O. Skavhaug and O. \v{C}ert\'{i}k},
     title = {{Swiginac}},
     year = 2009,
     note = { \url{http://swiginac.berlios.de/}}
