--- a/TODO
+++ b/TODO
@@ -13,6 +13,8 @@ Things to check
 * Use \leqslant instead of \leq?
 * Check for use of \mathcal{T}_h instead of \mathcal{T}
 * use of "... ; that is, ..."
+* Check all editor notes and author notes
+* Use {figure*} where suitable
 
 Things to discuss
 
@@ -20,3 +22,4 @@ Things to discuss
 * Use of "..." vs ``...''
 * Use of "etc" vs "etc."
 * Figure out where to put code examples and refer to them
+* How to cite: bla bla Foo [2010], or bla bla bla in/by~Foo [2010]
