Add comment about missing publication data for reference MardalWinther

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6663,6 +6663,7 @@ Taylor-Hood element.
   timestamp = {2009.06.08}
 }
 
+@comment{FIXME: missing year, journal volume and pages}
 @ARTICLE{MardalWinther,
   author = {K.-A. Mardal and R. Winther},
   title = {Preconditioning discretizations of systems of partial differential
