--- a/TODO
+++ b/TODO
@@ -23,3 +23,4 @@ Things to discuss
 * Use of "etc" vs "etc."
 * Figure out where to put code examples and refer to them
 * How to cite: bla bla Foo [2010], or bla bla bla in/by~Foo [2010]
+* Author names: only initials or full names
