--- a/TODO
+++ b/TODO
@@ -15,6 +15,10 @@ Things to check
 * use of "... ; that is, ..."
 * Check all editor notes and author notes
 * Use {figure*} where suitable
+* Use of i for local indices and I for global indices
+* Check use of "element tensor" vs "cell tensor"
+* Check use of \stackrel{+}{=}
+* Check use of : or , before formula
 
 Things to discuss
 
