--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3785,6 +3785,18 @@ Taylor-Hood element.
   timestamp = {2009.06.08}
 }
 
+@ARTICLE{HuangGuoShi2008,
+  title={{Vibration analysis of Kirchhoff plates by the Morley element method}},
+  author={Huang, J. and Guo, L. and Shi, Z.},
+  journal={Journal of Computational and Applied Mathematics},
+  volume={213},
+  number={1},
+  pages={14--34},
+  issn={0377-0427},
+  year={2008},
+  publisher={Elsevier}
+}
+
 @ARTICLE{Simula.SC.648,
   author = {Hentschel, Susanne and Mardal, Kent-Andre and L{\o}vgren, Alf Emil
 	and Linge, Svein and Haughton, Victor},
@@ -6880,6 +6892,18 @@ Taylor-Hood element.
   timestamp = {2009.06.08}
 }
 
+@ARTICLE{MinXu2006,
+  title={{The Morley element for fourth order elliptic equations in any dimensions}},
+  author={Ming, W. and Xu, J.},
+  journal={Numerische Mathematik},
+  volume={103},
+  number={1},
+  pages={155--169},
+  issn={0029-599X},
+  year={2006},
+  publisher={Springer}
+}
+
 @ARTICLE{MoesDolbowBelytschko1999,
   author = {N. Mo\"es and J. Dolbow and T. Belytschko},
   title = {A finite element method for crack growth without remeshing},
@@ -6944,6 +6968,18 @@ Taylor-Hood element.
   pages = {149-169},
   owner = {logg},
   timestamp = {2009.06.06}
+}
+
+@ARCTICLE{Morley1971,
+  title={{The constant-moment plate-bending element}},
+  author={Morley, L.S.D.},
+  journal={The Journal of Strain Analysis for Engineering Design},
+  volume={6},
+  number={1},
+  pages={20--24},
+  issn={0309-3247},
+  year={1971},
+  publisher={Prof Eng Publishing}
 }
 
 @INBOOK{MortensenMardal2010,
