Some updates of notation for Ciarlet definition.

--- a/notation/notation.tex
+++ b/notation/notation.tex
@@ -247,28 +247,24 @@
   $b$ &--&
   a \emph{global} right-hand side vector, corresponding to $L(\phi_i)$ \\
   $\mathcal{L}$ &--&
-  the degrees of freedom (linear functionals) on $V_h$ \\
-  $\mathcal{L}_T$ &--&
-  the degrees of freedom (linear functionals) on $\mathcal{P}_T$ \\
-  $\mathcal{L}_0$ &--&
-  the degrees of freedom (linear functionals) on $\mathcal{P}_0$ \\
+  the degrees of freedom (linear functionals) on $\mathcal{V}$ \\
   %$N$ &--&
   %the dimension of $\hat{V}_h$ and $V_h$ \\
   %$n_T$ &--&
   %the dimension of $\mathcal{P}_T$ \\
   $\ell_i$ &--&
   a degree of freedom (linear functional) on $V_h$ \\
-  $\ell^T_i$ &--&
-  a degree of freedom (linear functional) on $\mathcal{P}_T$ \\
-  $\ell^0_i$ &--&
-  a degree of freedom (linear functional) on $\mathcal{P}_0$ \\
+  $\ell_i$ &--&
+  a degree of freedom (linear functional) on $\mathcal{V}$ \\
+  %$\ell^0_i$ &--&
+  %a degree of freedom (linear functional) on $\mathcal{V}_0$ \\
   %$\mathcal{P}_T$ &--&
   %the local function space on a cell $T$ \\
   %$\mathcal{P}_0$ &--&
   %the local function space on the reference cell $T_0$ \\
   $\mathcal{P}_q(T)$ &--&
   the space of polynomials of degree $\leq q$ on a domain $T$ \\
-  $\mathcal{P}_T$ &--&
+  $\mathcal{V}$ &--&
   the finite dimensional function space in the Ciarlet finite element definition \\
   $P_q$ &--&
   the Lagrange finite element of degree $q$ \\
