updated CSF bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3797,7 +3797,7 @@ Taylor-Hood element.
   publisher={Elsevier}
 }
 
-@ARTICLE{Simula.SC.648,
+@ARTICLE{HentschelMardalLovgren2010,
   author = {Hentschel, Susanne and Mardal, Kent-Andre and L{\o}vgren, Alf Emil
 	and Linge, Svein and Haughton, Victor},
   title = {Characterization of cyclical CSF flow in the foramen magnum and upper
@@ -5733,18 +5733,28 @@ Taylor-Hood element.
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{Simula.SC.522,
+@ARTICLE{LingeHaughtonLovgren2010,
   author = {Linge, Svein and Haughton, Victor and L{\o}vgren, Alf Emil and Mardal,
 	Kent-Andre and Langtangen, Hans Petter},
   title = {CSF flow dynamics at the cranio-vertebral junction studied with an
 	idealized model of the subarachnoid space and computational flow
 	analysis},
   journal = {American Journal of Neuroradiology},
-  year = {2009},
+  year = {2010},
   volume = {31},
   pages = {185-192},
   number = {1}
 }
+
+@Article{LingeHaughtonLovgren2011,
+  author = {Linge, Svein and Haughton, Victor and L{\o}vgren, Alf Emil and Mardal, Kent-Andre and Helgeland, Anders and Langtangen, Hans Petter},
+  title = {Effect of tonsilar herniation on cyclic {CSF} flow studied with computational flow analysis},
+  year = {2011},
+  abstract = {Purpose: The Chiari I malformation, characterized by tonsils extending below the foramen magnum, has increased cerebrospinal fluid (CSF) velocities compared to normal subjects.  Measuring the effect of tonsilar herniation on CSF flow in humans is confounded by inter-individual variation. The goal of this study was to determine the effect of herniated tonsils on flow velocity and pressure dynamics. Materials and Methods: A previously described 3D mathematical model of the normal subarachnoid space was modified by extending the tonsils inferiorly. The chamber created was compared with the anatomy of the subarachnoid space.  Pressures and velocities were calculated by Computational Fluid Analysis (CFA) methods for sinusoidal flow of a Newtonian fluid. Results were displayed as 2D color-coded plots and 3D animations. Pressure gradients and flow velocities were compared with those in the normal model. Velocity distributions were also compared with those in clinical images of CSF flow.  Results: The model represented grossly the subarachnoid space of a Chiari patient.  Fluid flow patterns in the Chiari model were complex with jets in some locations and stagnant flow in others. Flow jets, synchronous bi-directional flow, and pressure gradients were greater in the Chiari model than in the normal model.  The distribution of flow velocities in the model corresponded well with those observed in clinical images of CSF flow in Chiari I patients.  Conclusions: Tonsilar herniation per se increases the pressure gradients and the complexity of flow patterns associated with oscillatory CSF flow.},
+  journal = {Accepted in American Journal of Neuroradiology}
+}
+
+
 
 @ARTICLE{LioenSwart1998,
   author = {W. M. Lioen and J. J. B. de Swart},
