Small updates to logg-1.

--- a/TODO
+++ b/TODO
@@ -19,6 +19,7 @@ Things to check
 * Check use of "element tensor" vs "cell tensor"
 * Check use of \stackrel{+}{=}
 * Check use of : or , before formula
+* Make sure that all references are available
 
 Things to discuss
 
