--- a/book.tex
+++ b/book.tex
@@ -55,7 +55,7 @@
 \part{Implementation}
 
 %\fenicsinput{logg-2}
-%\fenicsinput{logg-1}
+\fenicsinput{logg-1}
 %\fenicsinput{kirby-3}
 %\fenicsinput{kirby-2}
 %\fenicsinput{wilbers}
