--- a/book.tex
+++ b/book.tex
@@ -24,8 +24,8 @@
 
 % Contents
 \tableofcontents
-\listoffigures
-\listoftables
+%\listoffigures
+%\listoftables
 
 % Start main matter
 \mainmatter
