Add revised version of chapter [schroll]

--- a/book.tex
+++ b/book.tex
@@ -79,7 +79,7 @@
 %\fenicsinput{narayanan}
 %\fenicsinput{oelgaard-1}
 %\fenicsinput{nikbakht}
-%\fenicsinput{schroll}
+\fenicsinput{schroll}
 %\fenicsinput{hake}
 %\fenicsinput{lezar}
 %\fenicsinput{mardal-4}
