--- a/book.tex
+++ b/book.tex
@@ -45,7 +45,7 @@
 %\fenicsinput{kirby-7}
 %\fenicsinput{kirby-6}
 %\fenicsinput{kirby-1}
-%\fenicsinput{kirby-5}
+\fenicsinput{kirby-5}
 \fenicsinput{logg-3}
 %\fenicsinput{oelgaard-2}
 %\fenicsinput{kirby-8}
