--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,8 +1,6 @@
 % This file was created with JabRef 2.6.
 % Encoding: UTF8
 
-@STRING{ijnmf = {Int. {J}. {N}umer. {M}ethods {F}luids}}
-
 @MISC{www:swig,
   author = {David Beazley et. al.},
   title = {{SWIG} software package},
@@ -869,8 +867,7 @@ Taylor-Hood element.
   author = {Satish Balay and Kris Buschelman and William D. Gropp and Dinesh
 	Kaushik and Matthew G. Knepley and Lois Curfman McInnes and Barry
 	F. Smith and Hong Zhang},
-  title = {{PETSc} {W}eb page},
-  howpublished = {URL:\url{http://www.mcs.anl.gov/petsc}},
+  title = {{PETSc} web page},
   year = {2001},
   timestamp = {2008.10.10},
   url = {http://www.mcs.anl.gov/petsc}
@@ -2982,16 +2979,6 @@ Taylor-Hood element.
   timestamp = {2009.06.06}
 }
 
-@ARTICLE{EthierSteinman1994,
-  author = {C. Ross Ethier and D. A. Steinman},
-  title = {Exact fully 3D Navier-Stokes Solutions for Benchmarking},
-  journal = ijnmf,
-  year = {1994},
-  volume = {19},
-  pages = {369--375},
-  file = {:RosSte1994.pdf:PDF}
-}
-
 @ARTICLE{EthierSteinmann1994,
   author = {C. R. Ethier and D. A. Steinmann},
   title = {Exact fully {3D} {N}avier--{S}tokes solution for benchmarking},
@@ -3036,14 +3023,6 @@ Taylor-Hood element.
   volume = {76},
   pages = {419--440},
   number = {4},
-  coden = {NUMMA7},
-  fjournal = {Numerische Mathematik},
-  issn = {0029-599X},
-  mrclass = {65N30 (73V05 76M10)},
-  mrnumber = {MR1464150 (98f:65106)},
-  mrreviewer = {JiChun Li},
-  owner = {meg},
-  timestamp = {2009.07.23}
 }
 
 @CONFERENCE{FalgoutYang2002,
